// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`события васов: правильно логирует событие показа в стандартном попапе 1`] = `
Object {
  "category": "cars",
  "event": "VAS_SHOW",
  "isAuth": true,
  "offerId": "1085562758-1970f439",
  "originalPrice": 197,
  "price": 60,
  "serviceId": "all_sale_color",
}
`;

exports[`события васов: при клике на кнопку отправить соответствующее событие 1`] = `
Object {
  "category": "cars",
  "event": "VAS_CLICK",
  "isAuth": true,
  "offerId": "1085562758-1970f439",
  "originalPrice": 197,
  "price": 60,
  "serviceId": "all_sale_color",
}
`;
